package com.softserve.edu07.hw.Task2;

public class Helicopter extends FlyingVehicle{
    private int weight;
    private int maxHeight;

    public Helicopter(int passengers) {
        super(passengers);
    }

    @Override
    void fly() {}

    @Override
    void land() {}
}
